@@ -1,4 +1,5 @@
 1.0.0 - currently working on
+- [#3729] Change: Provide ext_autoload for our extensions
 - [#3641] Change: Update all copyrights to 2010
 - [#2494] Change: The autoloader should include the constants
 - [#2502] Change: Update copyrights to 2009
